--- a/App1/Resources/layout/AfficherUsager.axml
+++ b/App1/Resources/layout/AfficherUsager.axml
@@ -3,5 +3,124 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TableLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableLayout1">
+        <TableRow
+            android:id="@+id/tableRow1">
+            <TextView
+                android:text="Nom :"
+                android:layout_column="0"
+                android:id="@+id/tagNomUsager"
+                android:layout_width="70.5dp"
+                android:layout_height="28.5dp"
+                android:layout_marginLeft="0.0dp"
+                android:layout_marginTop="17dp" />
+            <TextView
+                android:text="NomUsager"
+                android:layout_column="1"
+                android:id="@+id/valueNomUsager"
+                android:layout_width="310.0dp"
+                android:layout_marginTop="17dp" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow2">
+            <TextView
+                android:text="Prenom :"
+                android:layout_column="0"
+                android:id="@+id/tagPrenomUsager"
+                android:layout_width="73.0dp"
+                android:layout_height="29.0dp" />
+            <TextView
+                android:text="PrenomUsager"
+                android:layout_column="1"
+                android:id="@+id/valuePrenomUsager" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow3">
+            <TextView
+                android:text="Adresse :"
+                android:layout_column="0"
+                android:id="@+id/tagAdresseUsager"
+                android:layout_width="84.0dp"
+                android:layout_height="28.5dp" />
+            <TextView
+                android:text="AdresseUsager"
+                android:layout_column="1"
+                android:id="@+id/valueAdresseUsager" />
+        </TableRow>
+    </TableLayout>
+    <TableLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableLayout2">
+        <TableRow
+            android:id="@+id/tableRow4">
+            <TextView
+                android:text="Couriel :"
+                android:layout_column="0"
+                android:id="@+id/tagCourielUsager"
+                android:layout_width="70.5dp"
+                android:layout_height="31.5dp" />
+            <TextView
+                android:text="CourielUsager"
+                android:layout_column="1"
+                android:id="@+id/valueCourielUsager" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow5">
+            <TextView
+                android:text="Telephone :"
+                android:layout_column="0"
+                android:id="@+id/tagTelephoneUsager"
+                android:layout_width="84.0dp"
+                android:layout_height="29.0dp" />
+            <TextView
+                android:text="Text"
+                android:layout_column="1"
+                android:id="@+id/valueTelephoneUsager" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow6">
+            <TextView
+                android:text="Actif"
+                android:layout_column="0"
+                android:id="@+id/tagActifUsager"
+                android:layout_height="27.5dp" />
+            <Switch
+                android:layout_column="1"
+                android:id="@+id/switchActifUsager"
+                android:layout_width="296.0dp"
+                android:layout_height="23.0dp" />
+        </TableRow>
+    </TableLayout>
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="138.0dp"
+        android:id="@+id/listViewCartesUsager" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableLayout3">
+        <TableRow
+            android:id="@+id/tableRow7">
+            <Button
+                android:text="Modifier"
+                android:layout_column="0"
+                android:id="@+id/boutonModifier"
+                android:layout_width="187.0dp" />
+            <Button
+                android:text="Supprimer"
+                android:layout_column="1"
+                android:id="@+id/boutonSupprimer"
+                android:layout_width="196.0dp" />
+        </TableRow>
+    </TableLayout>
 </LinearLayout>
