--- a/App1/Resources/layout/ListViewUsagerItem.axml
+++ b/App1/Resources/layout/ListViewUsagerItem.axml
@@ -18,13 +18,13 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_column="0"
                 android:id="@+id/LabelNomActeur"
-                android:text="NOM :"
+                android:text="ContenuUsager"
                 android:layout_height="25.5dp"
                 android:layout_width="70.0dp" />
             <TextView
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_column="2"
-                android:id="@+id/ContenuNomActeur" />
+                android:id="@+id/ContenuUsager" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
